
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ debug ;
 char* getmsg (char*) ;
 int printf (char*,char const*) ;
 int putserv (char*,char const*) ;
 scalar_t__ strncmp (char*,char*,int) ;

int
cwd (const char *path)
{
        char *line;

        if (debug != 0)
                printf ("CWD %s\n", path);

        putserv ("CWD %s\n", path);
        line = getmsg ("250 ");

        if (strncmp ("250 ",line, 4) == 0)
                return (1);

        return (0);
}
